--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette: 
     fig_caption: yes
 vignette: > 
-  %\VignetteIndexEntry{Colors}
+  %\VignetteIndexEntry{Colors and color functions}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
