--- a/README.Rmd
+++ b/README.Rmd
@@ -39,8 +39,8 @@ library(unikn)  # load package
 
 ### Enabling corporate design elements in\ R {-}
 
-The **unikn** package provides color functions ---\ by defining dedicated colors and color palettes, and commands for changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles). 
-The pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can be adapted and extended for other institutions and purposes. 
+The **unikn** package provides useful color functions ---\ by defining dedicated colors and color palettes, and commands for changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ R. 
+The package's pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended for other institutions or purposes. 
 
 ## Background 
 
@@ -789,8 +789,9 @@ Color definitions are based on the specifications at:
 
 <!-- - [Colours for complex graphics (xls)](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/)   -->
 
-<!-- Update: -->
 
-(Updated on `r Sys.Date()`.)
+<!-- footer: -->
+
+[Updated on `r Sys.Date()`.]
 
 <!-- eof. -->
