--- a/README.Rmd
+++ b/README.Rmd
@@ -789,9 +789,10 @@ Color definitions are based on the specifications at:
 
 <!-- - [Colours for complex graphics (xls)](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/)   -->
 
+------ 
 
-<!-- footer: -->
+<!-- Footer: -->
 
-[Updated on `r Sys.Date()`.]
+[File `README.md` last updated on `r Sys.Date()`.]
 
 <!-- eof. -->
