--- a/README.Rmd
+++ b/README.Rmd
@@ -512,7 +512,7 @@ By default, `grepal()` searches the `r length(colors())`\ named colors provided 
 
 ```{r grepal-example-1, fig.width=5, fig.asp=.9, fig.align = 'center'}
 # Find colors matching a pattern: 
-oranges <- grepal("orange")
+oranges <- grepal("orange", plot = FALSE)
 
 # See color palette:
 seecol(oranges, 
@@ -524,8 +524,8 @@ Providing a list of color palettes to the `pal` argument of the `seecol()` funct
 
 ```{r grepal-example-2, fig.width=8, fig.asp=.30, fig.align = 'center'}
 # Find colors:
-pink_olive    <- grepal("(pink)|(olive)")
-purple_orange <- grepal("(purple)|(orange)")
+pink_olive    <- grepal("(pink)|(olive)", plot = FALSE)
+purple_orange <- grepal("(purple)|(orange)", plot = FALSE)
 
 # See color palettes:
 seecol(pal = list(pink_olive, purple_orange), 
