--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ library(unikn)  # load package
 ### Enabling corporate design elements in\ R {-}
 
 The **unikn** package provides useful color functions ---\ by defining dedicated colors and color palettes, and commands for changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ R. 
-The package's pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended for other institutions or purposes. 
+The package's pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended to other purposes or institutions. 
 
 ## Background 
 
@@ -52,15 +52,17 @@ Its key component is the ubiquitous use of a `Seeblau` color and a corresponding
 <!-- Goals of the unikn pgk: --> 
 
 The **unikn** package facilitates the use of corporate design elements for users of [R](https://www.r-project.org/). 
-While this renders the correct use of default specifications simple and straightforward, we leave some flexibility for experienced users (e.g., for creating scientific visualizations). 
+While this renders the use of default specifications simple and straightforward, experienced users can apply the color tools in a flexible and creative fashion (e.g., for designing color palettes to be used in scientific visualizations). 
 
 <!-- Overview: --> 
 
 The **unikn** package currently provides five types of objects and functions: 
 
 1. Some dedicated **colors** and **color palettes** (e.g., `Seeblau` and `pal_unikn`);  
-2. Functions for **viewing and comparing**, and for **changing and using** color palettes (`seecol()` and\ `usecol()`);  
+
+2. Functions for **viewing and comparing colors** (`seecol()`), and for **using or changing color palettes** (`usecol()`);  
 3. Functions for **creating color palettes** (`newpal()`), for **finding similar colors** (`simcol()`), and for **searching color names** (`grepal()`);  
+
 4. Functions for **plotting graphical objects** (e.g., boxes and frames);  
 5. Functions for **plotting styled text** elements (e.g., highlighting and underlining text).  
 <!-- 6. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
@@ -793,6 +795,6 @@ Color definitions are based on the specifications at:
 
 <!-- Footer: -->
 
-[File `README.md` last updated on `r Sys.Date()`.]
+[File `README.md` updated on `r Sys.Date()`.]
 
 <!-- eof. -->
