--- a/vignettes/color_recipes.Rmd
+++ b/vignettes/color_recipes.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Color recipes"
 author: "SPDS, uni.kn"
-date: "2022 08 10"
+date: "2022 08 20"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -200,7 +200,7 @@ for (i in 1:n_pal){
 seecol(pal = l_pal, 
        pal_names = s_pal,
        col_brd = "white", lwd_brd = 1,
-       title = t_lbl)
+       main = t_lbl)
 ```
 
 
@@ -265,7 +265,7 @@ pal_google <- newpal(color_google, names_google)
 # 5. Inspect color palette:
 seecol(pal_google, 
        col_brd = "white", lwd_brd = 8,
-       title = "Colors of the Google logo")
+       main = "Colors of the Google logo")
 ```
 
 The new palette `pal_google` can now be used in R graphics and modified in various ways (e.g., by the `usecol()` function). 
@@ -284,9 +284,9 @@ pal_2 <- grepal("olive", plot = FALSE)
 pal_3 <- grepal("white", plot = FALSE)
 
 # See individual palettes:
-# seecol(pal_1, title = "Hues of 'orange' colors()")
-# seecol(pal_2, title = "Hues of 'olive' colors()")
-seecol(pal_3, title = "Hues of 'white' colors()", col_bg = "grey90")
+# seecol(pal_1, main = "Hues of 'orange' colors()")
+# seecol(pal_2, main = "Hues of 'olive' colors()")
+seecol(pal_3, main = "Hues of 'white' colors()", col_bg = "grey90")
 ```
 
 Providing a list of color palettes to the `pal` argument of the `seecol()` function allows comparing multiple color palettes: 
@@ -319,7 +319,7 @@ baux  <- grepal("bordeaux", pal_bordeaux, plot = FALSE)
 seecol(list(blues, oranges, purpviol, 
             c(blaus_1, blaus_2, pinks, peach, baux)),
        pal_names = c("blues", "oranges", "purpviol", "unikn colors"),
-       title ="Comparing custom color palettes")
+       main ="Comparing custom color palettes")
 ```
 
 
@@ -335,22 +335,22 @@ By default, `shades_of(n)` yields `n`\ shades ranging from `col_1 = "black"` to 
 
 ```{r shades-of-example-1, fig.width = 5, fig.asp = .90, fig.align = 'center'}
 greys <- shades_of(10)
-seecol(greys, title = "10 shades of grey")
+seecol(greys, main = "10 shades of grey")
 ```
 
 By adjusting\ `n`, the initial color\ `col_1`, and/or the final color\ `col_n`, 
 we can conveniently create simple color ranges: 
 
 ```{r shades-of-example-2, fig.width = 5, fig.asp = .90, fig.align = 'center'}
-seecol(shades_of(4, Seeblau, "black"), title = "4 shades of Seeblau")
-seecol(shades_of(7, "forestgreen"), title = "7 shades of 'forestgreen'")
+seecol(shades_of(4, Seeblau, "black"), main = "4 shades of Seeblau")
+seecol(shades_of(7, "forestgreen"), main = "7 shades of 'forestgreen'")
 ```
 
 Using `alpha` in the range $[0; 1]$ allows adjusting the transparency of the obtained colors: 
 
 ```{r shades-of-example-3, fig.width = 5, fig.asp = .90, fig.align = 'center'}
 wine_gold <- shades_of(4, Bordeaux, col_n = "gold", alpha = .65)
-seecol(wine_gold, title = "5 transparent shades from Bordeaux to gold")
+seecol(wine_gold, main = "5 transparent shades from Bordeaux to gold")
 ```
 
 Note that `shades_of()` is merely a convenient wrapper function for the `usecol()` function. 
